<resources>
    <string name="app_name">Access Checkout</string>
    <string name="submit_text">Submit</string>

    <string name="card_flow_nav_text">Card Flow</string>
    <string name="restricted_card_flow_nav_text">Restricted Card Flow</string>
    <string name="cvc_flow_nav_text">CVC Flow</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="card_brand_icon">card brand icon</string>
    <string name="card_brand_name">card brand name</string>

    <string name="enable_multi_token_title">CVC Session</string>
    <string name="enable_multi_token_desc">Retrieve card and cvc sessions</string>

    <string name="supported_card_brands_text">Supported Card Brands: Visa, Mastercard &amp; Amex</string>

    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_date_hint">MM/YY</string>
    <string name="card_cvc_hint">CVC</string>

    <integer name="card_tag">7348</integer>
</resources>