<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_restricted_card_flow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sample.ui.RestrictedCardFlowFragment">

    <com.worldpay.access.checkout.ui.AccessEditText
        android:id="@+id/restricted_card_flow_text_pan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="4"
        android:imeOptions="actionNext|flagNoFullscreen"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/DEFAULT"
        android:hint="@string/card_number_hint"
        app:layout_constraintEnd_toStartOf="@+id/restricted_card_flow_brand_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restricted_card_flow_brand_logo"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/card_brand_icon"
        android:scaleType="centerInside"
        android:src="@drawable/card_unknown_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restricted_card_flow_text_pan"
        app:layout_constraintTop_toTopOf="parent" />

    <com.worldpay.access.checkout.ui.AccessEditText
        android:id="@+id/restricted_card_flow_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="4"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="number"
        android:textColor="@color/DEFAULT"
        android:visibility="gone"
        android:enabled="false"
        android:hint="@string/card_expiry_date_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restricted_card_flow_text_pan"
        tools:ignore="TextFields" />

    <com.worldpay.access.checkout.ui.AccessEditText
        android:id="@+id/restricted_card_flow_text_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="4"
        android:imeOptions="actionDone|flagNoFullscreen"
        android:inputType="number"
        android:text=""
        android:textColor="@color/DEFAULT"
        android:visibility="gone"
        android:enabled="false"
        android:hint="@string/card_cvc_hint"
        app:layout_constraintStart_toEndOf="@+id/restricted_card_flow_expiry_date"
        app:layout_constraintTop_toBottomOf="@+id/restricted_card_flow_text_pan" />

    <TextView
        android:id="@+id/restricted_card_flow_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/supported_card_brands_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restricted_card_flow_text_pan" />

</androidx.constraintlayout.widget.ConstraintLayout>
